Fix alignment of post by removing content margin left

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -63,10 +63,6 @@ h3 {
 
 
 /* Posts */
-.content {
-    margin-left: 40px;
-}
-
 .date {
     color: #828282;
     font-size: .8em;
